# typo

./: Cargo.toml  README.md  justfile  rustfmt.toml
.github/workflows/: ci.yml
src/: action.rs  app.rs  arguments.rs  main.rs  state.rs  statistics.rs
